<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">在哪儿</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="back">后退</string>
    
	<!--蛋蛋 -->
    <string name="ap_name">距离感应设置</string>
    <string-array name="ganyingfanshispinner">
        <item>手机闹铃+振动</item>
        <item>手机闹铃</item>
        <item>手机振动</item>
    </string-array>
    <!--至秦江鸟 -->
    <string name="login_label_username">用户名</string>
    <string name="login_label_phone_number">手机号</string>
    <string name="login_label_password">密码</string>
    <string name="login_label_confirm_password">确认密码</string>
    <string name="login_label_signin">登录</string>
    <string name="login_label_register">注册</string>
    <string name="login_label_dllregister">一键注册</string>
    <string name="login_status_logging_in">登录中...</string>
    <string name="login_username_hint">Email或手机号</string>
    <string name="login_user_name_hint">请输入用户名</string>
    <string name="login_phone_number_hint">请输入手机号</string>
    <string name="menu_settings">Settings</string>
    <!--至秦江鸟 -->
    
       <!-- 自定义组件 -->
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">松开可以刷新</string>
    <string name="lastUpdateTime">最近更新：%s</string>
    <string name="load_full">已加载全部</string>
    <string name="no_data">暂无数据</string>
    <string name="more">加载中</string>

    <!-- 消除警告，可忽略 -->
    <string name="d">图片描述</string>
    
	<!--menu -->
	<string name="changeHeader">修改头像</string>
	<!-- <string name="userTel">18959285463</string> -->
	<string name="text_myuserTel">text</string>
	<string name="my_message">我的消息</string>
	<string name="my_my">个人信息</string>
	<string name="my_share">我的分享</string>
	<string name="my_history">我的行程</string>
	<string name="my_advice">我的建议</string>
    <string name="my_setting">我的设置</string>
    
    <!-- addperson Dialog -->
    <string name="title_alert">提示信息</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    
    
    
    
</resources>
