<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ebebeb">


    <RelativeLayout
        android:id="@+id/login_div"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dip"
        android:background="@drawable/login_background_login_div_bg"
        android:fitsSystemWindows="true"
        android:layout_centerInParent="true"
        android:padding="15dip"
        android:paddingBottom="50dp"
        android:paddingLeft="50dp" >       
        <TextView
            android:id="@+id/login_phone_number_input"
            style="@style/normalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/login_label_phone_number" />

        <EditText
            android:id="@+id/phone_number_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_phone_number_input"
            android:hint="@string/login_phone_number_hint"
            android:inputType="text"
            android:singleLine="true" />

        <TextView
            android:id="@+id/login_password_input"
            style="@style/normalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/phone_number_edit"
            android:layout_marginTop="3dp"
            android:text="@string/login_label_password" />

        <EditText
            android:id="@+id/password_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_password_input"
            android:inputType="textPassword"
            android:password="true"
            android:singleLine="true" />

        
        
         <TextView
            android:id="@+id/login_confirm_password_input"
            style="@style/normalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/password_edit"
            android:layout_marginTop="3dp"
            android:text="@string/login_label_confirm_password" />

        <EditText
            android:id="@+id/confirm_password_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_confirm_password_input"
            android:inputType="textPassword"
            android:password="true"
            android:singleLine="true" />
    </RelativeLayout>

    <Button
        android:id="@+id/register_button"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_below="@+id/login_div"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_login"
        android:text="@string/login_label_register"
        android:textSize="20sp" />
  
</RelativeLayout>