<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#ebebeb" >
	<RelativeLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="40dp"
	    android:orientation="horizontal"
	    android:background="#63c9f9" >
	    <ImageView
		        android:id="@+id/back_add_newfriend"
		        android:layout_width="36dp"
		        android:layout_height="36dp"
		        android:layout_alignParentLeft="true"
		        android:layout_centerVertical="true"
		        android:layout_marginTop="15dp"
		        android:layout_marginLeft="15dp"
		        android:src="@drawable/ic_arrow_back_white_36dp"	
		        android:onClick="getBackClick" 
		        android:contentDescription="@string/back" />
     </RelativeLayout>

	<RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="100dp"
	    android:background="#63c9f9"
	     >
	    <com.example.where.login.LoginCircularImage
            android:id="@+id/profile_image"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_centerInParent="true"
             android:layout_marginTop="30dp"
            android:src="@drawable/login_face" />
	     
    </RelativeLayout>
    <RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="30dp"
	    android:background="#63c9f9"
	     >
	    <TextView
	        android:id="@+id/changeHeader"
	            android:layout_width="match_parent"
	            android:layout_height="25.0dip"
	            android:layout_centerInParent="true"
	            android:gravity="center_horizontal"
	            android:text="@string/changeHeader"
	            android:textColor="@color/white"
	            android:textSize="18.0sp"
	            android:onClick="getChaneImageClick" />
    </RelativeLayout>
    <RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="30dp"
	    android:background="#63c9f9"
	     >
	    <TextView
	            android:id="@+id/text_myuserTel"
	            android:layout_width="match_parent"
	            android:layout_height="25.0dip"
	            android:layout_centerInParent="true"
	            android:gravity="center_horizontal"
	            android:text="@string/text_myuserTel"
	            android:textColor="@color/white"
	            android:textSize="18.0sp" />
    </RelativeLayout>
	<RelativeLayout
	    android:layout_width="fill_parent"
	    android:layout_marginTop="20dp"
	    android:layout_height="40dp"
	    android:layout_marginLeft="30dp"
	    android:orientation="horizontal" >
        <ImageView
		        android:id="@+id/ic_my"
		        android:layout_width="30dp"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_centerVertical="true"
		        android:layout_marginLeft="20dp"
		        android:src="@drawable/ic_mood_black_36dp"
		        android:contentDescription="@string/my_my"
		          />
	   <TextView
	       android:id="@+id/text_myinformation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:paddingLeft="65.0dip"
            android:text="@string/my_my"
            android:textColor="@color/black"
            android:textSize="18.0sp" 
            android:onClick="onClick"/>
	</RelativeLayout>
	
	<RelativeLayout
	    android:layout_width="fill_parent"
	    android:layout_marginTop="20dp"
	    android:layout_height="40dp"
	    android:layout_marginLeft="30dp"
	    android:orientation="horizontal" >
	   <ImageView
		        android:id="@+id/ic_mymessage"
		        android:layout_width="30dp"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_centerVertical="true"
		        android:layout_marginLeft="20dp"
		        android:src="@drawable/ic_chat_black_36dp"
		        android:contentDescription="@string/my_message"
		          />
	   <TextView
	       android:id="@+id/text_mymessage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:paddingLeft="65.0dip"
            android:text="@string/my_message"
            android:textSize="18.0sp"
            android:textColor="@color/black"
            android:onClick="onMessageClick" />
	</RelativeLayout>
	
	<RelativeLayout
	    android:layout_width="fill_parent"
	    android:layout_marginTop="20dp"
	    android:layout_height="40dp"
	    android:layout_marginLeft="30dp"
	    android:orientation="horizontal" >
	   <ImageView
		        android:id="@+id/ic_myhsitory"
		        android:layout_width="30dp"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_centerVertical="true"
		        android:layout_marginLeft="20dp"
		        android:src="@drawable/ic_assistant_photo_black_36dp"
		        android:contentDescription="@string/my_history"
		          />
	   <TextView
	       android:id="@+id/text_myhsitory"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:paddingLeft="65.0dip"
            android:textColor="@color/black"
            android:text="@string/my_history"
            android:textSize="18.0sp"
            android:onClick="onClick" />
	</RelativeLayout>
	
	<RelativeLayout
	    android:layout_width="fill_parent"
	    android:layout_marginTop="20dp"
	    android:layout_height="40dp"
	    android:layout_marginLeft="30dp"
	    android:orientation="horizontal" >
	   <ImageView
		        android:id="@+id/ic_myadvice"
		        android:layout_width="30dp"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_centerVertical="true"
		        android:layout_marginLeft="20dp"
		        android:src="@drawable/ic_quick_contacts_mail_black_36dp"
		        android:contentDescription="@string/my_advice"
		          />
	   <TextView
	       android:id="@+id/text_myadvice"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:paddingLeft="65.0dip"
            android:textColor="@color/black"
            android:text="@string/my_advice"
            android:textSize="18.0sp"
            android:onClick="onClick" />
	</RelativeLayout>
	
	<RelativeLayout
	    android:layout_width="fill_parent"
	    android:layout_marginTop="20dp"
	    android:layout_height="40dp"
	    android:layout_marginLeft="30dp"
	    android:orientation="horizontal" >
	   <ImageView
		        android:id="@+id/ic_myshare"
		        android:layout_width="30dp"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_centerVertical="true"
		        android:layout_marginLeft="20dp"
		        android:src="@drawable/ic_share_black_36dp"
		        android:contentDescription="@string/my_share"
		          />
	   <TextView
	       android:id="@+id/text_myshare"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:paddingLeft="65.0dip"
            android:textColor="@color/black"
            android:text="@string/my_share"
            android:textSize="18.0sp"
            android:onClick="onClick" />
	</RelativeLayout>
	<RelativeLayout
	    android:layout_width="fill_parent"
	    android:layout_marginTop="20dp"
	    android:layout_height="40dp"
	    android:layout_marginLeft="30dp"
	    android:orientation="horizontal" >
	   <ImageView
		        android:id="@+id/ic_mysetting"
		        android:layout_width="30dp"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_centerVertical="true"
		        android:layout_marginLeft="20dp"
		        android:src="@drawable/ic_brightness_low_black_36dp"
		        android:contentDescription="@string/my_setting"
		          />
	   <TextView
	       android:id="@+id/text_mysetting"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:paddingLeft="65.0dip"
            android:textColor="@color/black"
            android:text="@string/my_setting"
            android:textSize="18.0sp"
            android:onClick="onClick" />
	</RelativeLayout>

</LinearLayout>